--- a/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/02_removeChange/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/02_removeChange/main.tex
@@ -3,9 +3,7 @@
 Entferne eine Änderung.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item action : ChangeAction
-            \paragraph*{Beschreibung}
-            Eine Instanz der Klasse \verb#ChangeAction#, die die zu entfernende Änderungsaktion repräsentiert.
+    \item action : ChangeAction = Instanz der Klasse \verb#ChangeAction#, die die zu entfernende Änderungsaktion repräsentiert.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Wahr, wenn erfolgreich, Falsch sonst
