--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/01_Queries/03_getAliasSuggestions/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/01_Queries/03_getAliasSuggestions/main.tex
@@ -6,12 +6,8 @@ Diese Methode fragt die aktuellen Alias-Vorschläge vom Server ab und gibt sie z
 Dabei müssen diese die angegebene Mindestanzahl an positiven und negativen Bewertungen erfüllen.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item minPositive: int
-            \paragraph*{Beschreibung}
-            Die minimale Anzahl an positiven Bewertungen.
-    \item minNegative: int
-            \paragraph*{Beschreibung}
-            Die minimale Anzahl an negativen Bewertungen.
+    \item minPositive: int = Die minimale Anzahl an positiven Bewertungen.
+    \item minNegative: int = Die minimale Anzahl an negativen Bewertungen.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Iterable<Alias>
