--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/01_Queries/04_isAdmin/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/01_Queries/04_isAdmin/main.tex
@@ -5,9 +5,7 @@
 Diese Methode fragt die Nutzerrolle vom Server ab und gibt dabei wahr zurück, wenn dieser ein Administrator ist.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item accessToken: String
-            \paragraph*{Beschreibung}
-            Access-Token des zu prüfenden Nutzers
+    \item accessToken: String = Access-Token des zu prüfenden Benutzers
 \end{itemize}
 \paragraph*{Rückgabewert}
 Wahr, falls Administrator, falsch sonst
