--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/01_acceptAliasSuggestion/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/01_acceptAliasSuggestion/main.tex
@@ -5,9 +5,7 @@ Akzeptiere den gegebenen Alias-Vorschlag.
 Diese Methode sendet dem Server die Nachricht, den gegebenen Alias-Vorschlag zu akzeptieren.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item alias: Alias
-            \paragraph*{Beschreibung}
-            Der zu akzeptierende Alias-Vorschlag.
+    \item alias: Alias = Der zu akzeptierende Alias-Vorschlag.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Wahr, falls erfolgreich akzeptiert, falsch sonst.
