--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/02_declineAliasSuggestion/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/02_declineAliasSuggestion/main.tex
@@ -5,9 +5,7 @@ Lehne den gegebenen Alias-Vorschlag ab.
 Diese Methode sendet dem Server die Nachricht, den gegebenen Alias-Vorschlag abzulehnen.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item alias: Alias
-            \paragraph*{Beschreibung}
-            Der abzulehnende Alias-Vorschlag.
+    \item alias: Alias = Der abzulehnende Alias-Vorschlag.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Wahr, falls erfolgreich abgelehnt, falsch sonst.
