--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/03_blacklistAliasSuggestion/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/03_blacklistAliasSuggestion/main.tex
@@ -5,9 +5,7 @@ Setze den gegebenen Alias-Vorschlag auf die Blacklist.
 Diese Methode sendet dem Server die Nachricht, den gegebenen Alias-Vorschlag auf die Blacklist zu setzen.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item alias: Alias
-            \paragraph*{Beschreibung}
-            Der auf die Blacklist zu setzende Alias-Vorschlag.
+    \item alias: Alias = Der auf die Blacklist zu setzende Alias-Vorschlag.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Wahr, falls erfolgreich auf die Blacklist gesetzt, falsch sonst.
