--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/04_deleteOfficialAlias/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/04_deleteOfficialAlias/main.tex
@@ -5,9 +5,7 @@ Entferne den gegebenen Alias aus den offiziellen Aliassen.
 Diese Methode sendet dem Server die Nachricht, den gegebenen Alias aus den offiziellen Aliassen zu entfernen.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item alias: Alias
-            \paragraph*{Beschreibung}
-            Der zu entfernende Alias.
+    \item alias: Alias = Der zu entfernende Alias.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Wahr, falls erfolgreich entfernt, falsch sonst.
