--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/05_deleteBlacklistEntry/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/05_deleteBlacklistEntry/main.tex
@@ -5,9 +5,7 @@ Entferne den gegeben Eintrag von der Blacklist.
 Diese Methode sendet dem Server die Nachricht, den gegebenen Eintrag von der Blacklist zu entfernen.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item entry: String
-            \paragraph*{Beschreibung}
-            Der zu entfernende Blacklisteintrag.
+    \item entry: String = Der zu entfernende Blacklisteintrag.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Wahr, falls erfolgreich entfernt, falsch sonst
