--- a/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/03_configure/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/03_configure/main.tex
@@ -8,9 +8,7 @@ OIDC-Client-JS \footnote{\href{https://github.com/IdentityModel/oidc-client-js}{
 Mögliche Einstellungen können dem Wiki \footnote{\href{https://github.com/IdentityModel/oidc-client-js/wiki\#configuration}{https://github.com/IdentityModel/oidc-client-js/wiki\#configuration}} entnommen werden.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item settings: UserManagerSettings
-            \paragraph*{Beschreibung}
-            Eine Instanz mit den Einstellungen zur Verbindung mit einem OIDC-Provider.
+    \item settings: UserManagerSettings = Instanz mit den Einstellungen zur Verbindung mit einem OIDC-Provider.
 \end{itemize}
 \paragraph*{Rückgabewert}
 void
