--- a/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/01_addChange/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/01_addChange/main.tex
@@ -4,15 +4,9 @@ Fügt eine Änderung mitsamt ihrer Metadaten hinzu.
 Dabei wird eine Instanz von \verb#ChangeAction# erzeugt und der aktuelle Zeitpunkt hinterlegt.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item change : Change
-            \paragraph*{Beschreibung}
-            Eine Instanz des Interfaces \verb#Change#, die die Änderung durchführt.
-    \item metadata : JSON
-            \paragraph*{Beschreibung}
-            Ein JSON mit darzustellenden Informationen.
-    \item category: String
-            \paragraph*{Beschreibung}
-            Die Kategorie der Änderung
+    \item change : Change = Instanz des Interfaces \verb#Change#, die die Änderung durchführt.
+    \item metadata : JSON = JSON mit darzustellenden Informationen.
+    \item category: String = Die Kategorie der Änderung
 \end{itemize}
 \paragraph*{Rückgabewert}
 Wahr, wenn erfolgreich, Falsch sonst
