Added Singleton to class Backend

--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/00_Beschreibung/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/00_Beschreibung/main.tex
@@ -1,2 +1,3 @@
 Die Klasse Backend stellt die Kommunikation mit dem Backend des Servers sicher.
-Dabei wird zwischen Queries und Mutations unterschieden:
+Dabei wird zwischen Queries und Mutations unterschieden.
+Die Klasse Backend ist ein Singleton.
