--- a/Kapitel/04_Admin_Panel/04_Klassen/06_Alias/03_getName/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/06_Alias/03_getName/main.tex
@@ -4,4 +4,4 @@ Getter für den Bezeichner eines Aliases
 \paragraph*{Parameter}
 Keine
 \paragraph*{Rückgabewert}
-Gebäudenummer als String
+String, Bezeichner des Aliases
