Add missing comma as requested

--- a/Kapitel/00_Backend/Resolvers/QueryResolver/MapIDQuery/getMapObject_int_String/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/MapIDQuery/getMapObject_int_String/main.tex
@@ -1,6 +1,6 @@
 \paragraph{\texttt{getMapObject(mapID : int) : String}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Gibt das gewünschte Kartenobjekt, d.h. dessen Originalname, als Zeichenkette, dem die übergebene ID entspricht zurück.
+Gibt das gewünschte Kartenobjekt, d.h. dessen Originalname, als Zeichenkette, dem die übergebene ID entspricht, zurück.
 \paragraph*{Beschreibung}
 Die Methode ist ausschließlich von Administratoren aufzurufen.
 Gibt die Anweisung an die Schnittstelle \texttt{MapIDService}, das Kartenobjekt als Zeichenkette, d.h. dessen Originalname, zurückzugeben, dem die übergebene ID entspricht, und gibt dies wiederum zurück.
