--- a/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/getUpdates_int_ListStringInt,ListStringInt,int/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/getUpdates_int_ListStringInt,ListStringInt,int/main.tex
@@ -4,7 +4,7 @@ Gibt eine Liste aller Aktualisierungen bezüglich der Aliasse zurück, d.h. eine
 \paragraph*{Beschreibung}
 Gibt die Anweisung an die Schnittstelle \texttt{AliasService}, eine Liste aller Aktualisierungen bezüglich der Aliasse und die neue Version seit der übergebenen Version zurückzugeben. 
 Dabei wird eine Liste aller neu hinzugefügten Aliasse, eine Liste aller entfernten Aliasse, und die neue Version zurückgegeben.
-Die Methode ermöglicht, dass ein Benutzer seine auf dem Smartphone hinterlegten Aliasse zu aktualisieren, sodass die Version der Aliasse auf dem Smartphone der Version der Aliasse auf dem Server entspricht.
+Die Methode ermöglicht einem Benutzer seine auf dem Smartphone hinterlegten Aliasse zu aktualisieren, sodass die Version der Aliasse auf dem Smartphone der Version der Aliasse auf dem Server entspricht.
 Hierfür wird die Version der Aliasse, die der Benutzer gerade auf seinem Smartphone hat, übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
