--- a/Kapitel/00_Backend/Resolvers/QueryResolver/MapIDQuery/getAllMapIDs_ListInt/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/MapIDQuery/getAllMapIDs_ListInt/main.tex
@@ -6,4 +6,4 @@ Die Methode ist ausschließlich von Administratoren aufzurufen.
 Gibt die Anweisung an die Schnittstelle \texttt{MapIDService}, eine Liste der IDs aller, in der entsprechenden Datenbank hinterlegten Kartenobjekte zurückzugeben, und gibt diese wiederum zurück.
 Die Methode ermöglicht, dass ein Administrator eine Liste der IDs aller, in der entsprechenden Datenbank hinterlegten Kartenobjekte anfragen und zurückbekommen kann.
 \paragraph*{Rückgabewert}
-Eine Liste der IDs aller, in der Datenbank hinterlegten Kartenobjekte.
+Eine Liste der IDs aller in der Datenbank hinterlegten Kartenobjekte.
