--- a/Kapitel/02_App/03_Model/Daten/SharedPreferences/main.tex
+++ b/Kapitel/02_App/03_Model/Daten/SharedPreferences/main.tex
@@ -1,6 +1,11 @@
 \subsubsection{Shared Preferences}
-Folgende Daten werden über Shared Preferences gespeichert.
+Einige Daten werden über Shared Preferences gespeichert. Es werden nur Strings unterstützt. 
+Nachfolgend ist angegeben, welchen Datentyp der gespeicherte String repräsentiert.\\
+Folgende Daten werden über Shared Preferences gespeichert:
 \begin{itemize}
+    \item language : String Identifier für die ausgewählte Sprache, die in der App verwendet wird.
+    \item theme : String Identifier für das ausgewählte Theme, das in der App verwendet wird.
+    \item storeSearches : boolean Wert, ob die letzten Suchbegriffe im Suchverlauf gespeichert werden.
     \item lastPosLongitude : double Längengrad der gespeicherten letzten Position.
     \item lastPosLatitude : double Breitengrad der gespeicherten letzten Position.
 \end{itemize}
