--- a/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/getUpdates_int_ListStringInt,ListStringInt,int/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/getUpdates_int_ListStringInt,ListStringInt,int/main.tex
@@ -4,13 +4,13 @@ Gibt eine Liste aller Aktualisierungen bezüglich der Aliasse zurück, d.h. eine
 \paragraph*{Beschreibung}
 Gibt die Anweisung an die Schnittstelle \texttt{AliasService}, eine Liste aller Aktualisierungen bezüglich der Aliasse und die neue Version seit der übergebenen Version zurückzugeben. 
 Dabei wird eine Liste aller neu hinzugefügten Aliasse, eine Liste aller entfernten Aliasse, und die neue Version zurückgegeben.
-Die Methode ermöglicht einem Benutzer seine auf dem Smartphone hinterlegten Aliasse zu aktualisieren, sodass die Version der Aliasse auf dem Smartphone der Version der Aliasse auf dem Server entspricht.
-Hierfür wird die Version der Aliasse, die der Benutzer gerade auf seinem Smartphone hat, übergeben.
+Die Methode ermöglicht einem Benutzer seine auf dem Endgerät hinterlegten Aliasse zu aktualisieren, sodass die Version der Aliasse auf dem Endgerät der Version der Aliasse auf dem Server entspricht.
+Hierfür wird die Version der Aliasse, die der Benutzer gerade auf seinem Endgerät hat, übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
     \item version : int
     		\paragraph*{Beschreibung}
-    		Die Version der Aliasse, die der Benutzer gerade auf seinem Smartphone hat.
+    		Die Version der Aliasse, die der Benutzer gerade auf seinem Endgerät hat.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Die Liste aller Aktualisierungen bezüglich der Aliasse, d.h. eine Liste aller neu hinzugefügten Aliasse samt ID des jeweiligen, dazugehörigen Kartenobjekts, eine Liste aller entfernten Aliasse samt ID des jeweiligen, dazugehörigen Kartenobjekts, und die neue Version als 3-Tupel seit der übergebenen Version.
