--- a/Kapitel/00_Backend/Repositories/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Repositories/Beschreibung/main.tex
@@ -1,8 +1,8 @@
 \subsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Wie erwähnt empfehlen wir die Datenhaltung mittels SQL Datenbanken, und den Zugriff auf diese mittels eines Repsitories,
-dass von der Libraryklasse "JpaRepository" erbt. Hierfür wird eine seperate Klasse mit den jeweiligen Konfigurationen benötigt,
-die dafür sorgt, dass die richtigen Einträge der richtigen Datenbank und dem passenden Repsoitory zugeordnet werden können (siehe Paket "Configurations").
+dass von der Libraryklasse \dq JpaRepository \dq erbt. Hierfür wird eine seperate Klasse mit den jeweiligen Konfigurationen benötigt,
+die dafür sorgt, dass die richtigen Einträge der richtigen Datenbank und dem passenden Repsoitory zugeordnet werden können (siehe Paket \dq Configurations \dq).
 
 \paragraph*{Enthaltene Klassen}
 \begin{itemize}
