--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/Beschreibung/main.tex
@@ -1,6 +1,6 @@
 \paragraph*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
-Nimmt Http-Requests entgegen, welche in erster Linie Aliasvorschläge manipulieren wollen.
+Nimmt HTTP-Requests mit dem Ziel, Aliaseinträge zu verändern, entgegen.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
     \item \texttt{blacklistAlias(toBlacklist : String) : boolean}
