--- a/Kapitel/00_Backend/Resolvers/MutationResolver/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/Beschreibung/main.tex
@@ -1,7 +1,7 @@
 \subsubsection*{Paketbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
-Nimmt Http-Requests entgegen, welche die gespeicherten Daten manipulieren wollen.
-Dafür empfehlen wir, dass alle Klassen dieses Paketes von der Libraryklasse "GraphQLMutationResolver" erben sollten.
+Nimmt HTTP-Requests mit dem Ziel, Daten zu verändern, entgegen.
+Dafür empfehlen wir, dass alle Klassen dieses Paketes von der Libraryklasse \dq GraphQLMutationResolver \dq erben sollten.
 \paragraph*{Enthaltene Klassen}
 \begin{itemize}
     \item AliasMutation
