--- a/Kapitel/00_Backend/Resolvers/QueryResolver/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/Beschreibung/main.tex
@@ -11,7 +11,7 @@ Nimmt Http-Requests entgegen, welche gespeicherte Daten abfragen wollen.
     		Bietet Schnittstelle zum Abfragen von Aliasvorschlägen, die mindestens so viele negative bzw. positive Bewertungen haben wie gefordert.
     \item MapIDQuery
     		\paragraph*{Beschreibung}
-    		Bietet Schnittstelle zum Abfrage aller MapIDs mit den dazugehörigen Kartenobjekten sowie das Abfragen bestimmter Kartenobjekte mittels ihrer MapID sowie die Abfrage
+    		Bietet Schnittstelle zur Abfrage aller MapIDs mit den dazugehörigen Kartenobjekten sowie das Abfragen bestimmter Kartenobjekte mittels ihrer MapID sowie die Abfrage
             der MapID mittels des Namens des Kartenobjekts.
 
 \end{itemize}
