--- a/Kapitel/00_Backend/Services/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/Beschreibung/main.tex
@@ -1,6 +1,6 @@
 \subsection*{Paketbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
-Schnittstellen, welche die Datenhaltung abstrahieren und Zugriff auf die zugrundeliegende Daten ermöglichen, ohne deren Struktur offenszulegen.
+Schnittstellen, welche die Datenhaltung abstrahieren und Zugriff auf die zugrundeliegende Daten ermöglichen, ohne deren Struktur offenzulegen.
 Hierfür werden Interfaces genutzt, die von den Resolvern referenziert werden, ebenfalls um in den oberen Schichten möglichst 
 wenig von Implementierungsdetails abhängig zu sein. Für die Datenhaltung eignet sich ein JpaRepository, dass auf 
 eine SQL Datenbank zugreift, sodass wir diese Variante empfehlen. Dementsprechend benötigt jede Service-Implementierungsklasse die jeweilige 
