--- a/Kapitel/00_Backend/Services/MapIDService/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/MapIDService/Beschreibung/main.tex
@@ -1,6 +1,6 @@
 \subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
-Zugriff auf die Datenhaltung über die MapID-einträge. Diese wird benötigt, wenn alle vorhanden mapIDs angezeigt angezeigt werden sollen oder
+Zugriff auf die Datenhaltung über die MapID-einträge. Diese wird benötigt, wenn alle vorhanden MapIDs angezeigt werden sollen oder
 mittels einer bestimmten der Name des jeweiligen Kartenobjekts bzw. andersrum erhalten werden soll.
 
 \paragraph*{Enthaltene Methoden}
