--- a/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/Beschreibung/main.tex
@@ -1,7 +1,7 @@
 \subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
-Nimmt Http-Requests entgegen, welche Informationen über die hinterlegten Aliasse sowie über die Blacklist abfragen wollen.
-Dafür empfehlen wir, dass alle Klassen dieses Paketes von der Libraryklasse "GraphQLQueryResolver" erben sollten.
+Nimmt HTTP-Requests zur Abfrage von Informationen über die hinterlegten Aliasse sowie über die Blacklist entgegen.
+Dafür empfehlen wir, dass alle Klassen dieses Paketes von der Libraryklasse \dq GraphQLQueryResolver \dq erben sollten.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
     \item \texttt{getAlias(mapID : int) : List<Alias> aliases}
