--- a/Kapitel/00_Backend/Resolvers/QueryResolver/AliasSuggestionQuery/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/AliasSuggestionQuery/Beschreibung/main.tex
@@ -1,6 +1,6 @@
 \subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
-Nimmt Http-Requests entgegen, welche Informationen über die hinterlegten AliasVorschläge sowie über die Blacklist abfragen wollen.
+Nimmt Http-Requests entgegen, welche Informationen über die hinterlegten Alias-Vorschläge sowie über die Blacklist abfragen.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
     \item \texttt{getAliasSuggestions(minValToShowPos : int, minValToShowNeg : int) : List<AliasSuggestion>} aliasSuggestions
