--- a/Kapitel/00_Backend/Resolvers/QueryResolver/MapIDQuery/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/MapIDQuery/Beschreibung/main.tex
@@ -1,6 +1,6 @@
 \subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
-Nimmt Http-Requests entgegen, welche Kartenobjekte bzw. MapIDs abfragen wollen.
+Nimmt Http-Requests entgegen, welche Kartenobjekte bzw. MapIDs abfragen.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
     \item \texttt{getMapObject(mapID : int) : String}
