--- a/Kapitel/04_Admin_Panel/01_Layouts/01_Public_Layout/main.tex
+++ b/Kapitel/04_Admin_Panel/01_Layouts/01_Public_Layout/main.tex
@@ -1,33 +1,33 @@
 \subsection{Public-Layout}
 
-\subsubsection{Desktop}
-\paragraph*{Statischer Aufbau}
+\subsubsection{Statischer Aufbau}
+\paragraph*{Desktop}
 Das Public-Layout besteht aus einer zentrierten 3x3 Tabelle.
 Im folgenden sind die Felder zeilenweise durchnummeriert, beginnend mit der 1.
+Die Felder 1, 2, 4 und 5 sind zu einem großen Feld zusammengefasst. Diese Felder beinhalten den Inhalt der Seite, die das Public-Layout nutzt. 
+Die Felder 3 und 6 sind zusammengefasst und beinhalten die Anmeldung.
+Die Felder 7 bis 9 sind zusammengefasst und beinhaltend die Verlinkungen.
 
-\subparagraph*{Seiteninhalt}
-Die Felder 1, 2, 4 und 5 sind zu einem großen Feld zusammengefasst. In diesem Feld wird der Inhalt geladen,
-der durch die Seite definiert wird, die das Public-Layout nutzt.
+\paragraph*{Mobil}
+Das Public-Layout besteht aus 3 horizontalen übereinanderliegende Segmente, die die ihnen zur Verfügung stehende Horizontale füllen.
+Segment 1 beinhaltet den Inhalt der Seite, die das Public-Layout nutzt. 
+Segment 2 beinhaltet die Anmeldung.
+Segment 3 beinhaltet die Verlinkungen
 
-\subparagraph*{Anmeldung}
-Die Felder 3 und 6 sind zusammengefasst. In diesen Feldern existiert ein Element pro Anmeldemöglichkeit.
-
-\subparagraph*{Verlinkungen}
-Die Felder 7 bis 9 sind zusammengefasst. In diesen Feldern existieren Verlinkungen zu wichtigen Ressourcen dieses Projektes.
-
-\paragraph*{Dynamisches Verhalten}
-\subparagraph*{Seiteninhalt}
+\subsubsection{Dargestellte Inhalte}
+\paragraph*{Seiteninhalt}
+In diesem Feld wird der Inhalt geladen, der durch die Seite definiert wird, die das Public-Layout nutzt.
 Das dynamische Verhalten des Seiteninhalts wird durch die Seite definiert, die das Public-Layout verwendet.
 
-\subparagraph*{Anmeldung}
+\paragraph*{Anmeldung}
+In diesen Feldern existiert ein Element pro Anmeldemöglichkeit.
 Wird ein Anmeldungselement geklickt, so wird der Benutzer auf die Anmeldeseite des entsprechenden Dienstes weitergeleitet, um sich zu authentifizieren.
 Anschließend wird er wieder zur vorherigen Seite zurückgeleitet.
 
-\subparagraph*{Verlinkungen}
+\paragraph*{Verlinkungen}
+In diesen Feldern existieren Verlinkungen zu wichtigen Ressourcen dieses Projektes.
 Wird eine Verlinkung geklickt, so öffnet sich das Verlinkungsziel in einem neuen Browser-Tab.
 
-\paragraph*{Mobil}
-
-\paragraph*{Allgemeines dynamisches Verhalten}
+\subsubsection{Allgemeines dynamisches Verhalten}
 Angemeldete Administratoren werden direkt zum Dashboard weitergeleitet.
 Ein Element, über das gehovert oder auf das geklickt wird, ändert seine Hintergrundfarbe zu einer helleren Abwandlung der eigentlichen Hintergrundfarbe.
