--- a/Kapitel/00_Backend/Repositories/UserRepository/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Repositories/UserRepository/Beschreibung/main.tex
@@ -1,7 +1,7 @@
 \subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Verwaltet Zugriffe auf die zugrundeliegende Datenbank der vorhandenen User Einträge.
-Dafür müssen Einträge hinzugefügt und User mittels ihres Pseudonyms abgefragt werden können.
+Dafür müssen Einträge hinzugefügt und User mittels ihres vom jeweiligen Access-Token abgeleiteten Nutzeridentifikators (Pseudonym) abgefragt werden können.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
     \item +findByName(user : String) : User
