added more descriptions

--- a/Kapitel/00_Backend/Services/AliasSuggestionServiceImp/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/AliasSuggestionServiceImp/Beschreibung/main.tex
@@ -1,7 +1,7 @@
 \subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
-Implementiert die Methoden von AliasService.
+Implementiert die Methoden von AliasSuggestionService.
 \paragraph*{Benötigte Repositories}
 \begin{itemize}
-    \item AliasRepository
+    \item AliasSuggestionRepository
 \end{itemize}
