--- a/Kapitel/00_Backend/Models/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Models/Beschreibung/main.tex
@@ -1,9 +1,19 @@
-\subsection{Paketbeschreibung : Resolver}%$$$M
+\subsection{Paketbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
-\paragraph*{Beschreibung}
-\paragraph*{Enthaltene Pakete}
+    Enthält die Klassen der zu speichernden Entitys.
+\paragraph*{Enthaltene Klassen}
 \begin{itemize}
-    \item 
+    \item Alias
     		\paragraph*{Beschreibung}
-          
+            Als bestehender Alias für ein Kartenobjekt in der entsprechenden Datenhaltung gespeichert und von 
+            dem AliasRepository verwaltet oder als gelöschter Alias von DeletedAliasRepository verwaltet.
+    \item AliasSuggestion
+    		\paragraph*{Beschreibung}
+          Bestehender Alias-Vorschlag für ein Kartenobjekt, der bewertet und akzeptiert werden kann.
+    \item BlacklistEntry 
+            \paragraph{Beschreibung}
+          Bestehender Eintrag in der Blacklist.
+    \item MapID
+            \paragraph{Beschreibung} 
+          Bildet eine bestimmte MapId vom Typ int auf das entsprechende Kartenobjekt ab.
 \end{itemize}
