Added MapObjectInfoDisplay to indexfile

--- a/Kapitel/02_App/01_View/Karte/main.tex
+++ b/Kapitel/02_App/01_View/Karte/main.tex
@@ -4,6 +4,7 @@
 \inprelmod{DisplayData}
 \inprelmod{MapScreen}
 \inprelmod{LevelChangeDisplay}
+\inprelmod{InfoAnzeige}
 \inprelmod{TileMarkerOverlay}
 \inprelmod{Marker}
 \inprelmod{Klassendiagramm}
