Created IMapObjectInfoController class

--- a/Kapitel/02_App/02_ViewModel/Karte/Interfaces/main.tex
+++ b/Kapitel/02_App/02_ViewModel/Karte/Interfaces/main.tex
@@ -2,3 +2,4 @@
 \inprelmod{MapDisplayDataProvider}
 \inprelmod{MapLayerDataController}
 \inprelmod{LevelChangeController}
+\inprelmod{IMapObjectInfoController}
