Added IMapObjectInfoController to other classes

--- a/Kapitel/02_App/01_View/Karte/InfoAnzeige/main.tex
+++ b/Kapitel/02_App/01_View/Karte/InfoAnzeige/main.tex
@@ -87,3 +87,8 @@ Es gibt zwei Möglichkeiten die kompakte Anzeige zu schließen:
     \item Der Benutzer packt die kompakte Anzeige im oberen Teil (Überschrift und höher) und zeiht sie nach unten (drag-Operation). 
 \end{itemize}
 In beiden Fällen gibt es die gleiche Animation: Die kompakte Anzeige verschwindet nach unten. Danach ist sie geschlossen.
+
+\paragraph*{Parameter}
+\begin{itemize}
+    \item controller : IMapObjectInfoController IMapObjectInfoController von dem diese Klasse ihre Daten bezieht.
+\end{itemize}
