--- a/Kapitel/02_App/02_ViewModel/Karte/Interfaces/MapDisplayDataProvider/main.tex
+++ b/Kapitel/02_App/02_ViewModel/Karte/Interfaces/MapDisplayDataProvider/main.tex
@@ -71,3 +71,11 @@ Gibt den LevelChangeControllers für den Etagenwechsel zurück.
 Keine.
 \paragraph*{Rückgabewert}
 LevelChangeControllers für den Etagenwechsel.
+
+\subsubsection{\texttt{+ getMapObjectInfoController() : IMapObjectInfoController}}%$$$M
+\paragraph*{Beschreibung}
+Gibt einen IMapObjectInfoController zurück.
+\paragraph*{Parameter}
+Keine.
+\paragraph*{Rückgabewert}
+LevelChangeControllers.
