--- a/Kapitel/02_App/02_ViewModel/Karte/MapController/main.tex
+++ b/Kapitel/02_App/02_ViewModel/Karte/MapController/main.tex
@@ -12,7 +12,7 @@ Diese Information ist durch den Wechsel zwischen Ansichten durch NavHost und Nav
 \paragraph*{Kurzbeschreibung}
 Erstellt einen neuen MapController.
 \paragraph*{Beschreibung}
-Erstellt einen neuen LevelModeController und einen neuen BuildingModeController.
+Erstellt einen neuen LevelModeController, einen BuildingModeController und einen IMapObjectInfoController.
 \paragraph*{Parameter}
 \begin{itemize}
     \item dataProvider : IMapDataProvider IMapDataProvider von dem diese Klasse die Kartendaten bezieht.
