Enhance parameters in directories of method
Enhance parameters in directories of method
'addDeletedAlias_String,int_boolean'
in 'DeletedAliasService', 'DeletedAliasServiceImp'.

--- a/Kapitel/00_Backend/Services/DeletedAliasService/main.tex
+++ b/Kapitel/00_Backend/Services/DeletedAliasService/main.tex
@@ -1,5 +1,5 @@
 \subsection{DeletedAliasService}
 
 \inprelmod{Beschreibung}
-\inprelmod{addDeletedAlias_String_boolean}
+\inprelmod{addDeletedAlias_String,int_boolean}
 \inprelmod{getDeletedAlias_int_ListAlias}
