--- a/Kapitel/00_Backend/Services/DeletedAliasServiceImp/main.tex
+++ b/Kapitel/00_Backend/Services/DeletedAliasServiceImp/main.tex
@@ -1,5 +1,5 @@
 \subsection{DeletedAliasServiceImp}
 
 \inprelmod{Beschreibung}
-\inprelmod{addDeletedAlias_String_boolean}
+\inprelmod{addDeletedAlias_String,int_boolean}
 \inprelmod{getDeletedAlias_int_ListAlias}
