Add javadoc for method 'removeDeletedAlias_String,int_boolean'
Add javadoc for methods
'Kapitel/00_Backend/Services/DeletedAliasService/
removeDeletedAlias_String,int_boolean',
'Kapitel/00_Backend/Services/DeletedAliasServiceImp/
removeDeletedAlias_String,int_boolean' in '/main.tex'
(in the same above mentioned path).

--- a/Kapitel/00_Backend/Services/DeletedAliasService/main.tex
+++ b/Kapitel/00_Backend/Services/DeletedAliasService/main.tex
@@ -3,3 +3,4 @@
 \inprelmod{Beschreibung}
 \inprelmod{addDeletedAlias_String,int_boolean}
 \inprelmod{getDeletedAlias_int_ListAlias}
+\inprelmod{removeDeletedAlias_String,int_boolean}
