--- a/Kapitel/00_Backend/Services/DeletedAliasServiceImp/main.tex
+++ b/Kapitel/00_Backend/Services/DeletedAliasServiceImp/main.tex
@@ -3,3 +3,4 @@
 \inprelmod{Beschreibung}
 \inprelmod{addDeletedAlias_String,int_boolean}
 \inprelmod{getDeletedAlias_int_ListAlias}
+\inprelmod{removeDeletedAlias_String,int_boolean}
