Replace '\paragraph{}' with '\paragraph*{}'
Replace '\paragraph{}' with '\paragraph*{}
in methods of 'DeletedAliasService',
'DeletedAliasServiceImp'.

--- a/Kapitel/00_Backend/Services/DeletedAliasService/addDeletedAlias_String,int_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/DeletedAliasService/addDeletedAlias_String,int_boolean/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{addDeletedAlias(deletedAlias : String, mapID : int) : boolean}}%$$$M
+\paragraph*{\texttt{addDeletedAlias(deletedAlias : String, mapID : int) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Definiert das Erteilen der Anweisung an Klasse \texttt{DeletedAliasRepository}, einen entfernten Alias zur Datenbank der entfernten Aliasse hinzuzufügen.
 \paragraph*{Beschreibung}
